# mitosis

./: .gitignore  LICENSE  README.md  __main__.py  anyio_test.py  async_node.py  graph_model.py  mygraph.json  pyproject.toml  util.py
async_node/: __init__.py  async_node.py  asyncnode.py
examples/: anyio_test.py  app_example.py  attaching_flows.py  flat_hierarchy.py
examples/resources/: adder_printer.py  mygraph.json  persistent.json  pipe_through.py  random.py
flow_model/: __init__.py  model.py
mitosis/: __init__.py  __main__.py
mitosis/app/: __init__.py  app.py  flow_manager.py  persistent_cell_manager.py
mitosis/async_node/: __init__.py  async_node.py  port_group.py
mitosis/basics/: __init__.py  exceptions.py  valve.py
mitosis/flow/: __init__.py  flow.py
mitosis/model/: __init__.py  edge_model.py  external_ports_model.py  flow_model.py  node_model.py  persistent_cells_model.py
mitosis/util/: __init__.py  util.py
mygraph/: double_up.py  mygraph.json  ones.py  persistent.json  pipe_through.py  triple_up.py
