[tool.poetry]
name = "asyncnode-playground"
version = "0.1.0"
description = ""
authors = ["Jonatan Midtgaard <jonatan.midtgaard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.5.1"
pydantic = "^1.8.2"
anyio = "^3.2.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
